import java.nio.charset.StandardCharsets
import java.nio.file.Files

plugins {
    id 'java-library'
    id 'net.neoforged.moddev' version '2.0.143'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
    maven { url = "https://maven.ryanhcode.dev/releases" } // Sable
    maven { url = "https://maven.createmod.net" } // Create, Ponder, Flywheel
    maven { url = "https://maven.gegy.dev/releases" } // Registrate
    maven { url = "https://maven.blamejared.com" } // JEI
    maven { url = "https://cursemaven.com" }
    maven { url = "https://api.modrinth.com/maven" } // Simple Bedrock Model
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

neoForge {
    version = project.neo_version

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        clientData {
            type = "clientData"
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

def prepareBundledSbm = tasks.register('prepareBundledSbm', Jar) {
    archiveFileName = 'simplebedrockmodel-2.5.0-neoforge-mc26.1.jar'
    destinationDirectory = layout.buildDirectory.dir('generated/local-libs')
    from zipTree('libs/simplebedrockmodel-2.5.0-neoforge-mc26.1.jar')
    manifest {
        attributes 'Automatic-Module-Name': 'com.github.mcmodderanchor.simplebedrockmodel'
    }
}

def LangReplacements = [
        '空中厕所'     : ['秽之领域', '空中卫生间'],
        '大便失禁'     : ['秽壤潮涌', '巧克力喷泉'],
        '恶兆污秽'     : ['恶兆污秽', '悦动甜蜜'],
        '马桶搋子'     : ['污秽棍', '魔女扫帚'],
        '马桶制杖'     : ['污秽杖', '魔女法杖'],
        '食粪者'       : ['食粪者', '小谗鬼'],
        '养粪人'       : ['污秽者', '甜品师'],
        '一切屎于脚下' : ['万物始于污秽', '一切食于脚下'],
        '屎溅之铃'     : ['秽间钟', '时间之铃'],
        '不屎'         : ['反秽', '巧克力'],
        '屎'           : ['秽壤', '巧克力'],
        '粪水'         : ['秽壤液', '巧克力液'],
        '化粪'         : ['秽壤化', '巧克力化'],
        '挑粪匠'       : ['拾秽工', '高能饮品'],
        '蛆块链'       : ['蛆块链', '区块链'],
        '寄生虫'       : ['寄生虫', '花朵快快长'],
        '蛔虫'         : ['蛔虫', '白巧克力棒'],
        '苍蝇'         : ['秽壤飞蝇', '暗色蜜蜂'],
        '厕所'         : ['还元坑', '巧克力礼盒'],
        '马桶'         : ['化生龛', '葡萄酒杯'],
        '蛆'           : ['蛆', '牛奶巧克力'],
        '粪便'         : ['秽壤', '巧克力'],
        '粪'           : ['秽壤', '巧克力'],
        '大便'         : ['秽壤团', '草莓塔'],
        '蝇'           : ['蝇', '蜂'],
        '忌讳'         : ['忌讳', '甜蜜'],
        '肛气'         : ['肛气', '氨气'],
        '屁声'         : ['秽气声', '排气声'],
        '如厕'         : ['出恭', '出恭'],
        '尿'           : ['秽水', '茶水']
]
def officialReplacements = [:]
def communityReplacements = [:]
LangReplacements.each { key, value ->
    officialReplacements[key] = value[0]
    communityReplacements[key] = value[1]
}

def generateLang = tasks.register('generateLang') {
    group = 'data generation'

    def sourceFile = layout.projectDirectory.file('src/main/resources/assets/poopsky/lang/zh_cn.json')
    def officialOutput = layout.projectDirectory.file('src/main/resources/resourcepacks/poopsky_official_pack/assets/poopsky/lang/zh_cn.json')
    def communityOutput = layout.projectDirectory.file('src/main/resources/resourcepacks/poopsky_community_pack/assets/poopsky/lang/zh_cn.json')

    inputs.file sourceFile
    inputs.property 'officialReplacements', officialReplacements.collect { k, v -> "$k\u0000$v" }
    inputs.property 'communityReplacements', communityReplacements.collect { k, v -> "$k\u0000$v" }
    outputs.files officialOutput, communityOutput

    doLast {
        def sourceContent = Files.readString(sourceFile.asFile.toPath(), StandardCharsets.UTF_8)
        if (sourceContent.startsWith('\uFEFF')) {
            sourceContent = sourceContent.substring(1)
        }
        [[officialOutput, officialReplacements], [communityOutput, communityReplacements]].each { target ->
            def outputPath = target[0].asFile.toPath()
            Files.createDirectories(outputPath.parent)
            def content = sourceContent
            target[1].each { source, replacement -> content = content.replace(source, replacement) }
            Files.writeString(outputPath, content, StandardCharsets.UTF_8)
        }
    }
}

tasks.named('runClientData').configure {
    dependsOn generateLang
}

tasks.register('runData') {
    group = 'data generation'
    dependsOn tasks.named('runClientData')
}

tasks.named('processResources').configure {
    dependsOn generateLang
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

// 机械动力的还在移植，用不了，先排除编译！
sourceSets {
    main {
        java {
            exclude 'com/altnoir/poopsky/compat/create'
            exclude 'com/altnoir/poopsky/compat/jei/create'
            exclude 'com/altnoir/poopsky/compat/kubejs'
            exclude 'com/altnoir/poopsky/compat/maid'
        }
    }
}

dependencies {
    // JEI
    compileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    localRuntime "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
    // Create 机械动力的还在移植，用不了，先注释了
/*    implementation("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
    implementation("net.createmod.ponder:Ponder-NeoForge-${minecraft_version}:${ponder_version}")
    compileOnly("dev.engine-room.flywheel:flywheel-neoforge-api-${minecraft_version}:${flywheel_version}")
    runtimeOnly("dev.engine-room.flywheel:flywheel-neoforge-${minecraft_version}:${flywheel_version}")*/
    implementation jarJar("com.tterrag.registrate:Registrate:${registrate_version}")
    implementation "com.maydaymemory:mae:1.1.4"
    implementation(jarJar(files(prepareBundledSbm)))
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(ProcessResources).configureEach {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
